# torfin

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.mjs  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  docker-publish.yml
branding/: preview.html
data/: jellyfin.env.example
docs/: README.md  deployment.md  development.md  legal.md  security.md  setup.md  troubleshooting.md
scripts/: bug-hunt.mjs  deploy-remote.mjs  deploy-thinktower.mjs  docker-entrypoint.sh  errors-summary.mjs  generate-pwa-splash.mjs  git-push-with-deploy.sh  install-git-hooks.sh  smoke-test-init.mjs  test-all.mjs  test-catalog-navigation.mjs  test-kiosk-navigation.mjs  test-search-debounce.mjs  test-server-api.mjs  test-torbox-resolve.mjs  test-transcode-pipeline.mjs  test-web-downloads.mjs  ui-smoke-test.mjs
server/: error-log.mjs  ffmpeg-bin.mjs  jellyfin.mjs  media-probe.mjs  torbox.mjs  transcode-strategy.mjs  transcode.mjs
server/__tests__/: error-log.test.mjs
src/: App.tsx  index.css  main.tsx  webkit-video.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: badge.rs  downloads.rs  jellyfin.rs  lib.rs  native_player.rs  secrets.rs  torbox.rs  transcode.rs
src/components/: AppDrawer.tsx  AppErrorBoundary.tsx  AppLink.tsx  AppModal.tsx  AppToaster.tsx  ConfirmationDialog.tsx  DownloadDestinationPicker.tsx  DownloadDestinationWizard.tsx  DownloadDestinationsSettings.tsx  Sidebar.tsx  (+26 more)
(+115 files in other folders)
