[package]
name = "app"
version = "1.0.0-beta.2"
description = "Torfin — browse streams and download to Jellyfin"
authors = ["Torfin Contributors"]
license = "MIT"
repository = "https://github.com/al5ina5/torfin"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "cookies"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tiny_http = "0.12"
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
